vlib/v/checker/tests/array_map_fn_err_c.vv
fn do_nothing(a string) {}
fn main() {
	a := [1,2,3,4].map(do_nothing)
	println(a)
}
